// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numeralsUtilities: processAndRenderNumeralsBlockFromSource end-to-end tests Snapshot 1: simple math block with units, emitters, result insertion 1`] = `
<div
  class="numerals-block numerals-panes numerals-plain numerals-alt-row-color numerals-emitters-present numerals-hide-non-emitters"
>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # Physics Calculation
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		speed = 5 m/s
    </span>
    <span
      class="numerals-result"
    >
       → 5 m / s
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		distance = 100 m
    </span>
    <span
      class="numerals-result"
    >
       → 100 m
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      		time = distance / speed
    </span>
    <span
      class="numerals-result"
    >
       → 20 s
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		time
    </span>
    <span
      class="numerals-result"
    >
       → 20 s
    </span>
  </div>
</div>
`;

exports[`numeralsUtilities: processAndRenderNumeralsBlockFromSource end-to-end tests Snapshot 2: simple math block with test of locale formatting 1`] = `
<div
  class="numerals-block numerals-panes numerals-plain numerals-alt-row-color"
>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # Locale Test
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		1000
    </span>
    <span
      class="numerals-result"
    >
       → 1,000
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		3.14
    </span>
    <span
      class="numerals-result"
    >
       → 3.14
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		lambda=780.246021 nanometer
    </span>
    <span
      class="numerals-result"
    >
       → 780.246 nanometer
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		nu=speedOfLight/lambda
    </span>
    <span
      class="numerals-result"
    >
       → 384,228,115,147,286.25 Hz
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      		pi+1
    </span>
    <span
      class="numerals-result"
    >
       → 4.142
    </span>
  </div>
</div>
`;

exports[`numeralsUtilities: processAndRenderNumeralsBlockFromSource end-to-end tests Snapshot 3: longer example with more features 1`] = `
<div
  class="numerals-block numerals-panes numerals-plain numerals-alt-row-color numerals-emitters-present numerals-hide-non-emitters"
>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # Sum and Total
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      apples = 3
    </span>
    <span
      class="numerals-result"
    >
       → 3
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      pears = 4
    </span>
    <span
      class="numerals-result"
    >
       → 4
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      grapes = 10
    </span>
    <span
      class="numerals-result"
    >
       → 10
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      <span>
        fruit = 
      </span>
      <span
        class="numerals-sum"
      >
        @Sum
      </span>
      <span />
    </span>
    <span
      class="numerals-result"
    >
       → 17
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      monday = $10
    </span>
    <span
      class="numerals-result"
    >
       → 10 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      tuesday = $20
    </span>
    <span
      class="numerals-result"
    >
       → 20 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      wednesday = $30
    </span>
    <span
      class="numerals-result"
    >
       → 30 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      <span>
        profit = 
      </span>
      <span
        class="numerals-sum"
      >
        @Total
      </span>
      <span />
    </span>
    <span
      class="numerals-result"
    >
       → 60 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # Sums to empty line or header
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      elementary = 5 years
    </span>
    <span
      class="numerals-result"
    >
       → 5 years
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      middle = 3 years
    </span>
    <span
      class="numerals-result"
    >
       → 3 years
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      high = 4 years
    </span>
    <span
      class="numerals-result"
    >
       → 4 years
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      <span>
        school = 
      </span>
      <span
        class="numerals-sum"
      >
        @total
      </span>
      <span />
    </span>
    <span
      class="numerals-result"
    >
       → 12 years
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # Emitters
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      test = 1+1  
    </span>
    <span
      class="numerals-result"
    >
       → 2
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      b = 32  
    </span>
    <span
      class="numerals-result"
    >
       → 32
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      b + test + 6
    </span>
    <span
      class="numerals-result"
    >
       → 40
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      test + 3
      <span
        class="numerals-inline-comment"
      >
        #this is the main thing
      </span>
    </span>
    <span
      class="numerals-result"
    >
       → 5
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      # this is a comment =&gt; # ignore it
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      test + 4
      <span
        class="numerals-inline-comment"
      >
        # this is after comment =&gt;
      </span>
    </span>
    <span
      class="numerals-result"
    >
       → 6
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
       
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      income = $100,000 
    </span>
    <span
      class="numerals-result"
    >
       → 100,000 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      tax_rate = 20%
    </span>
    <span
      class="numerals-result"
    >
       → 0.2
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      taxes = income * tax_rate
    </span>
    <span
      class="numerals-result"
    >
       → 20,000 USD
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      distance = 10miles
    </span>
    <span
      class="numerals-result"
    >
       → 10 miles
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      speed = 20 m/s
    </span>
    <span
      class="numerals-result"
    >
       → 20 m / s
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      time = distance / speed
    </span>
    <span
      class="numerals-result"
    >
       → 804.672 s
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      b + test + 2=&gt;
    </span>
    <span
      class="numerals-result"
    >
       → 36
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      3+2
    </span>
    <span
      class="numerals-result"
    >
       → 5
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    />
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input numerals-empty"
    >
      #Currency
    </span>
    <span
      class="numerals-result numerals-empty"
    >
       
    </span>
  </div>
  <div
    class="numerals-error-line numerals-line"
  >
    <span
      class="numerals-input"
    >
      1€ + 1€ 
    </span>
    <span
      class="numerals-result"
    >
      <span
        class="numerals-error-name"
      >
        SyntaxError:
      </span>
      <span
        class="numerals-error-message"
      >
        Syntax error in part "€ + 1€ " (char 2)
      </span>
    </span>
  </div>
</div>
`;

exports[`numeralsUtilities: processAndRenderNumeralsBlockFromSource end-to-end tests simple math block with currency and emitter with snapshot 1`] = `
<div
  class="numerals-block numerals-panes numerals-plain numerals-alt-row-color numerals-emitters-present numerals-hide-non-emitters"
>
  <div
    class="numerals-line"
  >
    <span
      class="numerals-input"
    >
      amount = 100 USD + $1,000
    </span>
    <span
      class="numerals-result"
    >
       → 1,100 USD
    </span>
  </div>
  <div
    class="numerals-line numerals-emitter"
  >
    <span
      class="numerals-input"
    >
      tax = 10% * amount
    </span>
    <span
      class="numerals-result"
    >
       → 110 USD
    </span>
  </div>
</div>
`;
